# Onboarding-Candidate-Profile-Intelligence-Platform

./: .dockerignore  .env.example  .gitignore  README.md
.github/workflows/: ci.yml
docs/: api.md  arquitecture.md  onboarding.md  qdrant-collection.md  runbook.md
docs/adrs/: 001-decentralized-error-handling.md  002-database-migrations-and-seeding.md  003-vector-search-with-qdrant.md  004-refactor-structure-search-semantic.md  005-llm-embedding-decision.md  006-rust-batch-worker.md  007-timeouts-retrys.md  008-structured-logging.md  009-llm-fallback.md
infra/: .env.example  Dockerfile.fastapi  Dockerfile.flask  Dockerfile.pipelines  Dockerfile.react  Dockerfile.svelte  Dockerfile.worker-rust  docker-compose.yml
infra/db/: init.sql
infra/qdrant_data/: raft_state.json
pipelines/: requirements.txt
pipelines/etl/: extract.py  load.py  main.py  transform.py
pipelines/tests/: conftest.py  test_embeddings_service.py  test_extract.py  test_load.py  test_transform.py
pipelines/utils/: embeddings_service.py  retry.py  search_service.py
prompts/candidate_summary/: v1.txt  v2.txt
prompts/skill_extraction/: v1.txt
services/api-fastapi/: main.py  pytest.ini  requirements.txt
services/api-flask/: pytest.ini  requirements.txt
services/worker-rust/: Cargo.toml
services/worker-rust/src/: config.rs  main.rs  queue.rs
services/worker-rust/src/jobs/: database.rs  embeddings.rs  mod.rs  processor.rs  qdrant_service.rs  types.rs
ui/react-app/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
ui/svelte-mf/: index.html  package.json  (+2 more)
(+79 files in other folders)
